3.4.3
 - Added support for user-defined distinct types.

3.4.2
 - Fixed a bug concerning numeric columns with unlimited precision in postgreSQL.
 - Amended configuration for Firebird DBMS.

3.4.1
 - Improvements of graphical progress indicator.
 - Support for MySQL string literal escape sequences.
 - Fixed a bug concerning the command line option "working-folder".

3.4
 - Added graphical progress indicator.
 - Added command line option to set working folder.
 - Added reachability-analysis feature.
 - Internal refactorings.

3.3
 - Added ability to change the export mode (Insert/Upsert) for each table (via table's context menu)
 - Added support for data type 'GRAPHIC' on DB2 for z/OS.
 - Added ability to define display names for tables. [2946481]
 - Fixed binary format error on MS Sql Server. [2946477]
 - Added support for data type 'TIMESTAMP' on MS Sql Server. [2946477]
 - Added ability to define a placeholder for NULL columns in a DBUnit data set. [2953453]

3.2.1
 - Added ability to change XML root tag name. 

3.2
 - Support for XML column type.

3.1.9
 - Set maximum table name length to 120 characters.

3.1.8
 - Fix for bug 2871798 concerning importation of multi line CLOBs.

3.1.7
 - Fix for bug 2849047 concerning the recognition of identity columns in MS SQL-Server and Sybase.

3.1.6
 - Prevention of deadlocks during cancellation.

3.1.5
 - clean-up of working tables on error or shutdown.

3.1.4
 - Added ability to cancel long running actions by closing the console window.

3.1.3
 - New context menu item "Show associated table".
 - Minor GUI improvements and bug fixes.

3.1.2
 - Progress indicator for SQL import tool.
 - Minor GUI improvements.

3.1.1
 - Support for multi-row inserts in oracle.

3.1
 - A new feature for parametrizing filters, XML-templates, restriction conditions and subject conditions has been introduced.
 - GUI support for multi-line conditions and filters.
 - The "Query Builder" allows the user to build SQL queries based on the data model.